--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "bootstrap": "^4.0.0",        
+        "bootstrap": "^4.0.0",
+        "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7"    
+        "laravel-mix": "^4.0.7",
+        "popper.js": "^1.12",
+        "vue-template-compiler": "^2.5.22"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "laravel-echo": "^1.5.2",
+        "pusher-js": "^4.3.1"
     }
 }
